tests/fails/empty.rs
use shakespeare::actor;

#[actor]
mod actor;

fn main() {}
